Creato con Colaboratory

--- a/grid_search.ipynb
+++ b/grid_search.ipynb
@@ -6,7 +6,7 @@
       "name": "grid_search.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFfyouEytEKjx5UMWleXOp",
+      "authorship_tag": "ABX9TyOTLc8fexNPivViaO3jybBT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1674,7 +1674,8 @@
           }
         }
       }
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -1706,6 +1707,46 @@
         "!git clone --recursive https://github.com/JuanJoseMV/neuraltextgen.git\n",
         "!pip install -r /content/neuraltextgen/texygen/requirements.txt\n",
         "!pip install simpletransformers"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NbODLVefzxLy",
+        "outputId": "2c6fa7cc-1386-4653-cbb4-7940ed351181"
+      },
+      "source": [
+        "%%writefile setup.sh\n",
+        "export CUDA_HOME=/usr/local/cuda-10.1\n",
+        "git clone https://github.com/NVIDIA/apex\n",
+        "pip install -v --no-cache-dir --global-option=\"--cpp_ext\" --global-option=\"--cuda_ext\" ./apex"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing setup.sh\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dUc6JApI4OQ8"
+      },
+      "source": [
+        "%%capture\n",
+        "!sh setup.sh\n",
+        "\n",
+        "APEX_AVAILABLE = True"
       ],
       "execution_count": null,
       "outputs": []
@@ -1770,46 +1811,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NbODLVefzxLy",
-        "outputId": "2c6fa7cc-1386-4653-cbb4-7940ed351181"
-      },
-      "source": [
-        "%%writefile setup.sh\n",
-        "export CUDA_HOME=/usr/local/cuda-10.1\n",
-        "git clone https://github.com/NVIDIA/apex\n",
-        "pip install -v --no-cache-dir --global-option=\"--cpp_ext\" --global-option=\"--cuda_ext\" ./apex"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Writing setup.sh\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dUc6JApI4OQ8"
-      },
-      "source": [
-        "%%capture\n",
-        "!sh setup.sh\n",
-        "\n",
-        "APEX_AVAILABLE = True"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2058,8 +2059,7 @@
         "id": "ofXE83ehc21H"
       },
       "source": [
-        "# ROOT_PATH = '/content/drive/MyDrive/neuraltextgen/'\n",
-        "ROOT_PATH = '/content'\n",
+        "ROOT_PATH = '/content/drive/MyDrive/neuraltextgen/'\n",
         "LOG_FILE_PATH = os.path.join(ROOT_PATH, 'results.log')"
       ],
       "execution_count": null,
