Creato con Colaboratory

--- a/grid_search.ipynb
+++ b/grid_search.ipynb
@@ -6,7 +6,7 @@
       "name": "grid_search.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOTLc8fexNPivViaO3jybBT",
+      "authorship_tag": "ABX9TyNWSGZqVoHQZ/A4rfPz+eW0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1706,7 +1706,9 @@
         "%%capture\n",
         "!git clone --recursive https://github.com/JuanJoseMV/neuraltextgen.git\n",
         "!pip install -r /content/neuraltextgen/texygen/requirements.txt\n",
-        "!pip install simpletransformers"
+        "!pip install \n",
+        "\n",
+        "APEX_AVAILABLE = False"
       ],
       "execution_count": null,
       "outputs": []
@@ -1764,7 +1766,6 @@
         "os.chdir(\"/content/neuraltextgen/\")\n",
         "from NeuralTextGenerator import BertTextGenerator\n",
         "\n",
-        "APEX_AVAILABLE = False\n",
         "NUM_TEST = 5 # number of runs for each set of parameters"
       ],
       "execution_count": null,
