Creato con Colaboratory

--- a/grid_search.ipynb
+++ b/grid_search.ipynb
@@ -6,7 +6,7 @@
       "name": "grid_search.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNWSGZqVoHQZ/A4rfPz+eW0",
+      "authorship_tag": "ABX9TyMveCXkUp58a0MqVta6hDxe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2180,7 +2180,11 @@
         "\n",
         "  parameters = {**fixed_parameters, **dict(zip(parameters_to_test.keys(), p))} \n",
         "\n",
-        "  parameters = {**fixed_parameters, **dict(zip(parameters_to_test.keys(), p))} \n",
+        "  if parameters['sample'] is False and parameters['top_k'] == 100:\n",
+        "    print(f'ITERATION - [{i+1}/{tot_num_tests}]')\n",
+        "    print(parameters)\n",
+        "    continue\n",
+        "\n",
         "  print(f'ITERATION - [{i+1}/{tot_num_tests}]')\n",
         "  print(parameters)\n",
         "\n",
