Creado mediante Colaboratory

--- a/nGrams_evaluation.ipynb
+++ b/nGrams_evaluation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1R4Zl_xMzq2fnG0VrOHaRUTnWxfJw3UYi",
-      "authorship_tag": "ABX9TyNYMsyPhGXdQ+I3tC0W108d",
+      "authorship_tag": "ABX9TyOhsdIfIbY98V3VCfmuHUKA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1607,12 +1607,13 @@
         "               (\"/content/neuraltextgen/data/grid_search/parallel-0.15.csv\", \"/content/neuraltextgen/data/grid_search/text_generated_Parallel-015\"),\n",
         "               (\"/content/neuraltextgen/data/grid_search/sequential.csv\", \"/content/neuraltextgen/data/grid_search/text_generated_sequential\")]\n",
         "\n",
-        "header = [\"model\",\"mean_tbc\",\"std_tbc\",\"mean_wiki\",\"std_wiki\",\"self n=2\",\"self n=3\",\"self n=4\",\"WT103 n=2\", \"WT103 n=3\", \"WT103 n=4\", \"TBC n=2\", \"TBC n=3\", \"TBC n=4\"]\n",
+        "header = [\"model\",\"method\",\"mean_tbc\",\"std_tbc\",\"mean_wiki\",\"std_wiki\",\"self n=2\",\"self n=3\",\"self n=4\",\"WT103 n=2\", \"WT103 n=3\", \"WT103 n=4\", \"TBC n=2\", \"TBC n=3\", \"TBC n=4\"]\n",
         "resultsDF = pd.DataFrame(columns= header)\n",
         "\n",
         "for model in models:\n",
         "  bleu, rootpath = model\n",
         "  bleuDF = pd.read_csv(bleu, header=\"infer\")\n",
+        "  method =rootpath.split(\"_\")[-1]\n",
         "\n",
         "  for index, row in bleuDF.iterrows():\n",
         "    temperature = row[\"temperature\"] if row[\"temperature\"] == 0.1 else int(row[\"temperature\"])\n",
@@ -1629,12 +1630,12 @@
         "    pct_uniques_wiki = compareUniqueGrams(modelGrams, wikiGrams, maxGrams)\n",
         "    pct_uniques_tbc = compareUniqueGrams(modelGrams, tbcGrams, maxGrams)\n",
         "\n",
-        "    pct_uniques = [filepath[:-4]] + [row[\"mean_tbc\"],row[\"std_tbc\"],row[\"mean_wiki\"],row[\"std_wiki\"]] +list(pct_uniques_self.values()) +list(pct_uniques_wiki.values()) + list(pct_uniques_tbc.values())\n",
+        "    pct_uniques = [filepath[:-4], method] + [row[\"mean_tbc\"],row[\"std_tbc\"],row[\"mean_wiki\"],row[\"std_wiki\"]] +list(pct_uniques_self.values()) +list(pct_uniques_wiki.values()) + list(pct_uniques_tbc.values())\n",
         "    pct_uniquesDF = pd.DataFrame([pct_uniques], columns=header)\n",
         "\n",
         "    resultsDF = pd.concat([resultsDF ,pct_uniquesDF], ignore_index=True)"
       ],
-      "execution_count": 53,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1643,14 +1644,14 @@
         "id": "sg38v8-w4HcW",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 438
+          "height": 522
         },
-        "outputId": "5f74dd41-7279-43e6-ecad-a1cc94097fa3"
+        "outputId": "1ff9e5aa-d97c-4dc9-da8b-33ce49d78426"
       },
       "source": [
         "resultsDF"
       ],
-      "execution_count": 54,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1675,6 +1676,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>model</th>\n",
+              "      <th>method</th>\n",
               "      <th>mean_tbc</th>\n",
               "      <th>std_tbc</th>\n",
               "      <th>mean_wiki</th>\n",
@@ -1694,6 +1696,7 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>/max_iter=100,std_len=0,init_mask_prob=0,tempe...</td>\n",
+              "      <td>Attention-1</td>\n",
               "      <td>0.038</td>\n",
               "      <td>0.003</td>\n",
               "      <td>0.049</td>\n",
@@ -1711,6 +1714,7 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>/max_iter=100,std_len=0,init_mask_prob=0,tempe...</td>\n",
+              "      <td>Attention-1</td>\n",
               "      <td>0.039</td>\n",
               "      <td>0.004</td>\n",
               "      <td>0.051</td>\n",
@@ -1728,6 +1732,7 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>/max_iter=100,std_len=0,init_mask_prob=0,tempe...</td>\n",
+              "      <td>Attention-1</td>\n",
               "      <td>0.041</td>\n",
               "      <td>0.004</td>\n",
               "      <td>0.049</td>\n",
@@ -1745,6 +1750,7 @@
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>/max_iter=100,std_len=0,init_mask_prob=0,tempe...</td>\n",
+              "      <td>Attention-1</td>\n",
               "      <td>0.041</td>\n",
               "      <td>0.005</td>\n",
               "      <td>0.050</td>\n",
@@ -1762,6 +1768,7 @@
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>/max_iter=100,std_len=0,init_mask_prob=0,tempe...</td>\n",
+              "      <td>Attention-1</td>\n",
               "      <td>0.019</td>\n",
               "      <td>0.000</td>\n",
               "      <td>0.020</td>\n",
@@ -1792,10 +1799,12 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>283</th>\n",
               "      <td>/max_iter=500,std_len=5,init_mask_prob=1,tempe...</td>\n",
+              "      <td>sequential</td>\n",
               "      <td>0.078</td>\n",
               "      <td>0.015</td>\n",
               "      <td>0.057</td>\n",
@@ -1813,6 +1822,7 @@
               "    <tr>\n",
               "      <th>284</th>\n",
               "      <td>/max_iter=500,std_len=5,init_mask_prob=1,tempe...</td>\n",
+              "      <td>sequential</td>\n",
               "      <td>0.115</td>\n",
               "      <td>0.021</td>\n",
               "      <td>0.062</td>\n",
@@ -1830,6 +1840,7 @@
               "    <tr>\n",
               "      <th>285</th>\n",
               "      <td>/max_iter=500,std_len=5,init_mask_prob=1,tempe...</td>\n",
+              "      <td>sequential</td>\n",
               "      <td>0.360</td>\n",
               "      <td>0.052</td>\n",
               "      <td>0.132</td>\n",
@@ -1847,6 +1858,7 @@
               "    <tr>\n",
               "      <th>286</th>\n",
               "      <td>/max_iter=500,std_len=5,init_mask_prob=1,tempe...</td>\n",
+              "      <td>sequential</td>\n",
               "      <td>0.009</td>\n",
               "      <td>0.001</td>\n",
               "      <td>0.010</td>\n",
@@ -1864,6 +1876,7 @@
               "    <tr>\n",
               "      <th>287</th>\n",
               "      <td>/max_iter=500,std_len=5,init_mask_prob=1,tempe...</td>\n",
+              "      <td>sequential</td>\n",
               "      <td>0.027</td>\n",
               "      <td>0.003</td>\n",
               "      <td>0.026</td>\n",
@@ -1880,7 +1893,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>288 rows × 14 columns</p>\n",
+              "<p>288 rows × 15 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -1897,15 +1910,26 @@
               "286  /max_iter=500,std_len=5,init_mask_prob=1,tempe...  ...  0.999044\n",
               "287  /max_iter=500,std_len=5,init_mask_prob=1,tempe...  ...  0.993175\n",
               "\n",
-              "[288 rows x 14 columns]"
+              "[288 rows x 15 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 59
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cGhFCGtKjoWN"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
