Add Perplexity evaluator

--- a/GCNN.ipynb
+++ b/GCNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "GCNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCwnjBpicIQCsiPPkSVyqM",
+      "authorship_tag": "ABX9TyPPY3XmPGyEkTyIMuUzBOJQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "#!pip install GCNN_textfuncs\n",
         "#!git clone --recursive https://github.com/DavidWBressler/GCNN"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,6 +57,7 @@
         "from torch.utils.data.dataset import Dataset\n",
         "from torch.utils.data.sampler import Sampler\n",
         "import numpy as np\n",
+        "np.random.seed(seed=0)\n",
         "\n",
         "#create adaptive-softmax language-model dataset\n",
         "class LMDataset_GCNN(Dataset):\n",
@@ -124,7 +125,7 @@
         "    #return res as the padded tensor, and another tensor composed of the labels (found in s[1])\n",
         "    return res.cuda(), torch.FloatTensor(np.array([s[1] for s in samples])).squeeze().cuda()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +149,7 @@
         "#os.chdir(\"/content/GCNN/\")\n",
         "#from GCNN_textfuncs import *"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +160,7 @@
       "source": [
         "DATAPATH = Path('/data/GCNN/')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +171,7 @@
       "source": [
         "sns.set() #set graph formatting to seaborn"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +191,7 @@
         "!wget http://nlp.stanford.edu/data/glove.6B.zip -P /data/GCNN/\n",
         "!unzip /data/GCNN/glove.6B.zip -d /data/GCNN/"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +280,7 @@
         "df_trn_par.to_csv(DATAPATH/'train_proc_par2.csv', header=False, index=False)\n",
         "df_test_par.to_csv(DATAPATH/'test_proc_par2.csv', header=False, index=False)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,6 +303,10 @@
         "        self.trn_dl, self.val_dl, self.module = trn_dl, val_dl, module\n",
         "        self.modelvals=modelvals\n",
         "        self.model=self.module.cuda()\n",
+        "        self.optimizer = optim.SGD(self.model.parameters(), lr=self.modelvals['lr'], \n",
+        "            momentum=self.modelvals['mom'], weight_decay=self.modelvals['wd'],\n",
+        "                  nesterov=self.modelvals['nesterov'])\n",
+        "        \n",
         "    def model_fit(self):\n",
         "        samp_n=self.modelvals['samp_n']#the number of iterations in an epoch\n",
         "        starttime=time.time()\n",
@@ -375,7 +380,7 @@
         "        self.modelvals['train_loss_list']=train_loss_list\n",
         "        print('The end! {:.2f} minutes'.format((time.time()-starttime)/60))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,7 +413,7 @@
         "k=4 #kernel_width\n",
         "downbot=20# in the bottleneck layers, how much to decrease channel depth?"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -437,12 +442,12 @@
         "#Create data loaders for training and validation sets\n",
         "trn_samp=SortishSampler_GCNN(data_length=len(traindataset),key=lambda x:len(traindataset[x][0]), bs=bs)\n",
         "val_samp=SortSampler_GCNN(validdataset,key=lambda x:len(validdataset[x][0]))\n",
-        "train_loader = data_utils.DataLoader(traindataset, batch_size=bs, collate_fn=pad_collate_GCNN, sampler=trn_samp)\n",
-        "val_loader = data_utils.DataLoader(validdataset, batch_size=bs, collate_fn=pad_collate_GCNN,sampler=val_samp)\n",
+        "train_loader = data_utils.DataLoader(traindataset, batch_size=bs, pin_memory=False, collate_fn=pad_collate_GCNN, sampler=trn_samp)\n",
+        "val_loader = data_utils.DataLoader(validdataset, batch_size=bs, pin_memory=False, collate_fn=pad_collate_GCNN,sampler=val_samp)\n",
         "samp_n=len(traindataset)\n",
         "val_samp_n=len(validdataset)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -506,7 +511,7 @@
         "\n",
         "modelvals=get_modelvals()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +545,7 @@
         "    new_w[i] = vectors[r] if r>=0 else row_m #for our new embedding matrix, set the embedding at the index from our dict equal to the embedding from index r from word2vec's dict\n",
         "np.save(DATAPATH/'emb_wgts300_proc_par2.npy', new_w) #save the embedding weights"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +597,7 @@
         "        x=torch.mul(x1,x2) # [bs,out_c,seq_length,1]\n",
         "        return x+residual"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -640,7 +645,7 @@
         "        \n",
         "        return    outta"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -658,7 +663,7 @@
         "                           GCNNmodel(vs, emb_sz, k, nh, nl, downbot),modelvals)\n",
         "print(GCNNnet.model)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,7 +751,7 @@
         "new_w=np.load(DATAPATH/'emb_wgts300_proc_par2.npy') #load embedding weights\n",
         "GCNNnet.model.embed.weight.data=torch.FloatTensor(new_w).cuda()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +767,7 @@
       "source": [
         "GCNNnet.model_fit()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,12 +798,92 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xwiWTzHd5L6e"
+      },
+      "source": [
+        "# Perplexity"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "EbTdgkZnSCXr"
       },
       "source": [
-        ""
+        "#Do some preprocessing of the data:\n",
+        "link = \"/content/train.txt\"\n",
+        "#put data into df's w/ columns for 'labels' and 'text'\n",
+        "df_trn = pd.read_csv(link,header=None,names=['text'], sep=\"\\n\")\n",
+        "df_test = pd.read_csv(link,header=None,names=['text'], sep=\"\\n\")\n",
+        "df_trn['labels']=0\n",
+        "df_test['labels']=0\n",
+        "df_trn=df_trn[['labels','text']]\n",
+        "df_test=df_test[['labels','text']]\n",
+        "\n",
+        "#split data into paragraphs, then remove paragraphs <10 or >300 words\n",
+        "trn_paragraphs=[]\n",
+        "for docnum in range(len(df_trn)):\n",
+        "    trn_paragraphs.append(df_test.iloc[docnum][\"text\"])\n",
+        "trn_paragraphs.sort(key=len)\n",
+        "#trn_paragraphs=[par for par in trn_paragraphs if (len(par.split(' '))<300 and len(par.split(' '))>10)]#remove paragraphs >300 and <10 words\n",
+        "trn_paragraphs=[par+' xxeos ' for par in trn_paragraphs] #add EOS token at end of each paragraph\n",
+        "\n",
+        "test_paragraphs=[]\n",
+        "for docnum in range(len(df_test)):\n",
+        "    test_paragraphs.append(df_test.iloc[docnum][\"text\"])\n",
+        "test_paragraphs.sort(key=len)\n",
+        "#test_paragraphs=[par for par in test_paragraphs if (len(par.split(' '))<300 and len(par.split(' '))>10)]#remove paragraphs >300 and <10 words\n",
+        "test_paragraphs=[par+' xxeos ' for par in test_paragraphs] #add EOS token at end of each paragraph\n",
+        "\n",
+        "#put data into csv's\n",
+        "df_trn_par = pd.DataFrame({'text':trn_paragraphs})\n",
+        "df_test_par = pd.DataFrame({'text':test_paragraphs})\n",
+        "\n",
+        "df_trn_par['labels']=0\n",
+        "df_test_par['labels']=0\n",
+        "df_trn_par=df_trn_par[['labels','text']]\n",
+        "df_test_par=df_test_par[['labels','text']]\n",
+        "\n",
+        "df_trn_par.to_csv(DATAPATH/'train_proc_par2.csv', header=False, index=False)\n",
+        "df_test_par.to_csv(DATAPATH/'test_proc_par2.csv', header=False, index=False)\n",
+        "\n",
+        "#Use fast.ai to create a TextLMDataBunch object. See http://docs.fast.ai/text.data.html#class-textlmdatabunch\n",
+        "#This tokenizes and numericalizes the data\n",
+        "data_lm = TextLMDataBunch.from_csv(path=DATAPATH, csv_name='train_proc_par2.csv', test='test_proc_par2.csv')\n",
+        "itos=data_lm.train_ds.vocab.itos# the vocab\n",
+        "vs=len(itos)# vs is the length of the vocab\n",
+        "\n",
+        "#Grab the numericalized data from the TextLMDataBunch dataset, then construct new custom dataset using LMDataset_GCNN\n",
+        "trn_tokens=[data_lm.train_ds[i][0].data for i in range(len(data_lm.train_ds))]\n",
+        "traindataset=LMDataset_GCNN(trn_tokens)\n",
+        "valid_tokens=[data_lm.valid_ds[i][0].data for i in range(len(data_lm.valid_ds))]\n",
+        "validdataset=LMDataset_GCNN(valid_tokens)\n",
+        "\n",
+        "#Create data loaders for training and validation sets\n",
+        "trn_samp=SortishSampler_GCNN(data_length=len(traindataset),key=lambda x:len(traindataset[x][0]), bs=bs)\n",
+        "val_samp=SortSampler_GCNN(validdataset,key=lambda x:len(validdataset[x][0]))\n",
+        "train_loader = data_utils.DataLoader(traindataset, batch_size=bs, pin_memory=False, collate_fn=pad_collate_GCNN, sampler=trn_samp)\n",
+        "val_loader = data_utils.DataLoader(validdataset, batch_size=bs, pin_memory=False, collate_fn=pad_collate_GCNN,sampler=val_samp)\n",
+        "samp_n=len(traindataset)\n",
+        "val_samp_n=len(validdataset)\n",
+        "\n",
+        "val_loss=[]\n",
+        "GCNNnet.model.eval() #important to set to eval mode for testing, so that eg batchnorm and dropout aren't used\n",
+        "for batch_idx, (data, target) in enumerate(val_loader):\n",
+        "    data = Variable(data)\n",
+        "    GCNNnet.optimizer.zero_grad()\n",
+        "    #ONLY NEED FORWARD PASS... NO BACKPROP\n",
+        "    output = GCNNnet.model(data)\n",
+        "    loss= output.loss\n",
+        "    output=output.output\n",
+        "    val_loss.append(loss.data.item())\n",
+        "GCNNnet.model.train() #set back to training mode\n",
+        "ave_val_loss=sum(val_loss) / len(val_loss)\n",
+        "val_update_string='Validation Loss: {:.4f}\\tPerp: {:.4f}'.format(\n",
+        "    ave_val_loss,np.exp(ave_val_loss))\n",
+        "print(val_update_string)"
       ],
       "execution_count": null,
       "outputs": []
