--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -42,3 +42,12 @@ number = 1,
 pages = {234--778}, 
 year = 2004
 }
+
+@article{wang2019bert,
+      title={BERT has a Mouth, and It Must Speak: BERT as a Markov Random Field Language Model},
+      author={Alex Wang and Kyunghyun Cho},
+      year={2019},
+      eprint={1902.04094},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
