--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -43,11 +43,10 @@ pages = {234--778},
 year = 2004
 }
 
-@article{wang2019bert,
-      title={BERT has a Mouth, and It Must Speak: BERT as a Markov Random Field Language Model},
-      author={Alex Wang and Kyunghyun Cho},
-      year={2019},
-      eprint={1902.04094},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+@article{Wang2019BERTHA,
+  title={BERT has a Mouth, and It Must Speak: BERT as a Markov Random Field Language Model},
+  author={Alex Wang and Kyunghyun Cho},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1902.04094}
 }
