--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -1,4 +1,3 @@
-
 @misc{Authors14,
  author = {Authors},
  title = {The frobnicatable foo filter},
@@ -23,6 +22,17 @@ pages = {234--778},
 year = 2002
 }
 
+@article{article1,
+  author    = {Doe, John},
+  title     = {Title of article},
+  journal   = {journal of article},
+  year      = {2017},
+  volume    = {11},
+  number    = {1},
+  pages     = {11--13},
+  publisher = {Journal Publisher},
+}
+
 @article{Alpher03,
 author = {FirstName Alpher and  FirstName Fotheringham-Smythe},
 title = {Frobnication revisited},
@@ -44,10 +54,10 @@ year = 2004
 }
 
 @article{wang2019bert,
-      title={BERT has a Mouth, and It Must Speak: BERT as a Markov Random Field Language Model},
-      author={Alex Wang and Kyunghyun Cho},
-      year={2019},
-      eprint={1902.04094},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+title = {BERT has a Mouth, and It Must Speak: BERT as a Markov Random Field Language Model},
+author = {Alex Wang and Kyunghyun Cho},
+year = {2019},
+eprint = {1902.04094},
+archivePrefix = {arXiv},
+primaryClass = {cs.CL}
 }
