BERT figure added

--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -61,3 +61,12 @@ eprint = {1902.04094},
 archivePrefix = {arXiv},
 primaryClass = {cs.CL}
 }
+
+@misc{dauphin2017language,
+      title={Language Modeling with Gated Convolutional Networks},
+      author={Yann N. Dauphin and Angela Fan and Michael Auli and David Grangier},
+      year={2017},
+      eprint={1612.08083},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
